--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ng-annotate": "^0.3.2",
     "load-grunt-tasks": "^0.6.0"
-  }
+  },
+  "version": "0.3.2"
 }
